--- a/Code/Frontend/src/app/components/restaurants/restaurant/restaurant.component.html
+++ b/Code/Frontend/src/app/components/restaurants/restaurant/restaurant.component.html
@@ -1,40 +1,71 @@
 <div class="d-flex justify-content-between align-items-center mb-20 mt-10">
-    <h1 class="font-size-20 font-weight-700 mb-0">
-        Menu
-    </h1>
-    <button [routerLink]="['additem']">Add Item</button>
-    </div>
-    <div>
-  
-        <div class="mat-table__wrapper bg-white rounded-2">
-          <table mat-table [dataSource]="dataSource" class="bg-transparent">
-        
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef  > Item </th>
-              <td mat-cell *matCellDef="let element" > {{element.ItemName}} </td>
-            </ng-container>
-        
-            <!-- Number Column -->
-            <ng-container matColumnDef="category">
-              <th mat-header-cell *matHeaderCellDef > Price </th>
-                <td mat-cell *matCellDef="let element" >{{element.ItemPrice}}</td>
-            </ng-container>
-        
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef > Action </th>
-                  <td mat-cell *matCellDef="let element" ><button>aa</button></td>
-              </ng-container>
+  <h1 class="font-size-20 font-weight-700 mb-0">
+    Restaurants/{{restaurantName}}
+  </h1>
+  <button *ngIf="userCredentials.isOwner" class="btn" [routerLink]="['additem']">Add Item</button>
+  <button *ngIf="userCredentials.isOwner" class="btn" [routerLink]="['orders']">Orders</button>
+</div>
+<div>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns" class=""></tr>
-            <tr mat-row *matRowDef="let restaurant; columns: displayedColumns;" class="cursor-pointer"></tr>
-          </table>
-        <mat-paginator [length]="paginatorTotal"
-                       [pageSizeOptions]="[5, 10, 20]"
-                       [pageSize]="environment.pageSize"
-                       showFirstLastButtons 
-                       aria-label="Select page of periodic elements" class="rounded-2">
-        </mat-paginator>
-      
+  <div class="mat-table__wrapper bg-white rounded-2">
+    <table mat-table [dataSource]="dataSource" class="bg-transparent">
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Item </th>
+        <td mat-cell *matCellDef="let element; let i = index"> <input [(ngModel)]="element.ItemName"
+            [readonly]="!editable[i]" /></td>
+      </ng-container>
+
+      <!-- Number Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> Price </th>
+        <td mat-cell *matCellDef="let element; let i = index"><input [(ngModel)]="element.ItemPrice"
+            [readonly]="!editable[i]" /></td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <div *ngIf="userCredentials.isOwner">
+          <td mat-cell *matCellDef="let element"><button (click)="delete(element.id)">Delete</button></td>
         </div>
-      </div>
+        <div *ngIf="!userCredentials.isOwner">
+          <td mat-cell *matCellDef="let element; let i = index"><button (click)="decrement(element,i)">
+              <mat-icon>remove</mat-icon>
+            </button>
+            <input class="unit size1of2" [(ngModel)]="counter[i]" readonly />
+            <button (click)="increment(element,i)">
+              <mat-icon>add</mat-icon>
+            </button>
+          </td>
+        </div>
+      </ng-container>
+
+
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef></th>
+        
+        <td mat-cell *matCellDef="let element; let i = index">
+          <div *ngIf="userCredentials.isOwner">
+          <button mat-icon-button class="material-icons app-toolbar-menu save-button" color="primary"
+            (click)="edit(element,!editable[i],i)">
+            <mat-icon *ngIf="!editable[i]">edit</mat-icon>
+            <mat-icon *ngIf="editable[i]">check_circle</mat-icon>
+          </button>
+        </div>
+        </td>
+     
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class=""></tr>
+      <tr mat-row *matRowDef="let restaurant; columns: displayedColumns;" class=""></tr>
+    </table>
+    <mat-paginator [length]="paginatorTotal" [pageSizeOptions]="[5, 10, 20]" [pageSize]="environment.pageSize"
+      showFirstLastButtons aria-label="Select page of periodic elements" class="rounded-2">
+    </mat-paginator>
+
+  </div>
+</div>
+<button class="btn" (click)="orderNow()">
+  Order Now
+</button>
