--- a/Code/Frontend/src/app/components/restaurants/restaurant-orders/restaurant-orders.component.html
+++ b/Code/Frontend/src/app/components/restaurants/restaurant-orders/restaurant-orders.component.html
@@ -1,46 +1,41 @@
 <div class="d-flex justify-content-between align-items-center mb-20 mt-10">
-    <h1 class="font-size-20 font-weight-700 mb-0">
-        Orders
-    </h1>
-    </div>
-    <div>
-    
-  
-        <div class="mat-table__wrapper bg-white rounded-2">
-          <table mat-table [dataSource]="dataSource" class="bg-transparent">
-        
-            <!-- Name Column -->
-            <ng-container matColumnDef="customer">
-              <th mat-header-cell *matHeaderCellDef  > Customer </th>
-              <td mat-cell *matCellDef="let element" > {{element.Username}} </td>
-            </ng-container>
-        
-            <!-- Number Column -->
-            <ng-container matColumnDef="items">
-              <th mat-header-cell *matHeaderCellDef > Items </th>
-                <td mat-cell *matCellDef="let element" >{{element.Items}}</td>
-            </ng-container>
-        
-            <ng-container matColumnDef="totalPrice">
-                <th mat-header-cell *matHeaderCellDef > Total Price </th>
-                <td mat-cell *matCellDef="let element" >{{element.TotalPrice}}</td>
-              </ng-container>
+  <h1 class="font-size-20 font-weight-700 mb-0">
+    Orders
+  </h1>
+</div>
+<div>
 
-              <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef > Status </th>
-                <td mat-cell *matCellDef="let element" >
-                  <ng-select [items]="statuses" 
-                  [ngModelOptions]="{standalone: true}"
-                  bindLabel="status" 
-                  bindValue="status" 
-                  [(ngModel)]="element.Status"
-                  [searchable]="false">
-                  </ng-select>  </td>
-              </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns" class=""></tr>
-            <tr mat-row *matRowDef="let order; columns: displayedColumns;" class=""></tr>
-          </table>
-      
-        </div>
-      </div>
+  <div class="mat-table__wrapper bg-white rounded-2">
+    <table mat-table [dataSource]="dataSource" class="bg-transparent">
+
+      <ng-container matColumnDef="customer">
+        <th mat-header-cell *matHeaderCellDef> Customer </th>
+        <td mat-cell *matCellDef="let element"> {{element.Username}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="items">
+        <th mat-header-cell *matHeaderCellDef> Items </th>
+        <td mat-cell *matCellDef="let element">{{element.Items}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="totalPrice">
+        <th mat-header-cell *matHeaderCellDef> Total Price </th>
+        <td mat-cell *matCellDef="let element">{{element.TotalPrice}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let element">
+          <ng-select [items]="statuses" [ngModelOptions]="{standalone: true}" bindLabel="status" bindValue="status"
+            [(ngModel)]="element.Status" [searchable]="false">
+          </ng-select>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class=""></tr>
+      <tr mat-row *matRowDef="let order; columns: displayedColumns;" class=""></tr>
+    </table>
+
+  </div>
+</div>
