--- a/Code/Frontend/src/app/components/restaurants/restaurant/restaurant.component.html
+++ b/Code/Frontend/src/app/components/restaurants/restaurant/restaurant.component.html
@@ -18,9 +18,9 @@
       </ng-container>
 
       <!-- Number Column -->
-      <ng-container matColumnDef="category">
+      <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef> Price </th>
-        <td mat-cell *matCellDef="let element; let i = index"><input [(ngModel)]="element.ItemPrice"
+        <td mat-cell *matCellDef="let element; let i = index"><input type="number" [(ngModel)]="element.ItemPrice"
             [readonly]="!editable[i]" /></td>
       </ng-container>
 
