--- a/Code/Frontend/src/app/components/restaurants/restaurants-listing/restaurants-listing.component.html
+++ b/Code/Frontend/src/app/components/restaurants/restaurants-listing/restaurants-listing.component.html
@@ -1,18 +1,19 @@
-<div class="content">
-<div class="d-flex justify-content-between align-items-center mb-20 mt-10">
-  <h1 class="font-size-20 font-weight-700 mb-0">
-    Restaurants
-  </h1>
-  <input [(ngModel)]="keyWord" placeholder="Enter Restaurant Name or category" size="30" />
-  <button class="btn btn-default rounded-1 justify-content-center d-flex align-items-center"
-    (click)="getRestaurantsList(keyWord)">
-    <i class="fas fa-filter"></i> &nbsp; Filter
-  </button>
+<div class="d-flex align-items-column">
+  <div>
+    <input class="search" [(ngModel)]="keyWord" placeholder="Enter Restaurant Name or category" size="30" />
+    <button class="btn"
+      (click)="getRestaurantsList(keyWord)">
+      <i class="fas fa-filter"></i> &nbsp; Filter
+    </button>
+   
+  </div>
 </div>
 
-
-
+<div>
   <div class="mat-table__wrapper bg-white rounded-2">
+    <h1 class="padding-left-10px">
+      Restaurants
+    </h1>
     <table mat-table [dataSource]="dataSource" class="bg-transparent">
 
       <!-- Name Column -->
